GNOME Bugzilla – Bug 793091
Can't go back from Trash when I don't have any notes
Last modified: 2018-02-05 22:16:53 UTC
I built and ran Bijiben from master (commit 8a3dc1015ec04feb). I don't have any notes, so it came up empty, which is fine. If I click "view trash" from the application menu, it takes me to the "Trash" view, which is also empty, but I can't escape from this view. The back button doesn't do anything.
Created attachment 367783 [details] [review] Fix back button from trash view The back button wasn't working properly after the user switched to trash view (only when with empty note in main view). This commit fixes the issue by switching to the right view when the back button is pressed.
Review of attachment 367783 [details] [review]: lgtm.