Fix back button from trash view

The back button wasn't working properly after the user switched
to trash view (only when with empty note in main view).

This commit fixes the issue by switching to the right view
when the back button is pressed.

https://bugzilla.gnome.org/show_bug.cgi?id=793091